Fixed css bug on flowing facet values in IE: checkboxes used to overlap with the text values

--- a/exhibit/trunk/src/webapp/api/exhibit-bundle.css
+++ b/exhibit/trunk/src/webapp/api/exhibit-bundle.css
@@ -327,7 +327,7 @@ div.exhibit-flowingFacet-value {
     cursor:         pointer;
     clear:          both;
     position:       relative;
-    padding-left:   20px;
+    margin-left:    20px;
 }
 
 a.exhibit-flowingFacet-value-link {
@@ -347,7 +347,7 @@ span.exhibit-flowingFacet-value-count {
 
 div.exhibit-flowingFacet-value-checkbox {
     position:       absolute;
-    left:           0px;
+    left:           -20px;
     padding:        0;
     margin:         0;
 }
