--- a/exhibit/trunk/src/webapp/api/styles/util/facets.css
+++ b/exhibit/trunk/src/webapp/api/styles/util/facets.css
@@ -105,7 +105,7 @@ div.exhibit-flowingFacet-value {
     cursor:         pointer;
     clear:          both;
     position:       relative;
-    padding-left:   20px;
+    margin-left:    20px;
 }
 
 a.exhibit-flowingFacet-value-link {
@@ -125,7 +125,7 @@ span.exhibit-flowingFacet-value-count {
 
 div.exhibit-flowingFacet-value-checkbox {
     position:       absolute;
-    left:           0px;
+    left:           -20px;
     padding:        0;
     margin:         0;
 }
